# clash

./: .gitignore  Adders.hs  Alu.hs  Bits.hs  Constants.hs  CoreShow.hs  CoreTools.hs  Flatten.hs  FlattenTypes.hs  Generate.hs  GhcTools.hs  GlobalNameTable.hs  HighOrdAlu.hs  HighOrdAluOps.hs  HigherOrderCPU.hs  HsTools.hs  HsValueMap.hs  Inverter.hs  Main.hs  Normalize.hs  NormalizeTools.hs  NormalizeTypes.hs  Parser.hs  Pretty.hs  README.md  Shifter.hs  Sim.hs  Translator.hs  TranslatorTypes.hs  VHDL.hs  VHDLTools.hs  VHDLTypes.hs  cλash.cabal  ghc-packages  mmult.hs  reducer.hs
clash/: LICENSE  clash.cabal
clash/CLasH/: HardwareTypes.hs  Normalize.hs  Translator.hs  Utils.hs  VHDL.hs
clash/CLasH/Normalize/: NormalizeTools.hs  NormalizeTypes.hs
clash/CLasH/Translator/: Annotations.hs  TranslatorTypes.hs
clash/CLasH/Utils/: GhcTools.hs  HsTools.hs  Pretty.hs
clash/CLasH/Utils/Core/: BinderTools.hs  CoreTools.hs
clash/CLasH/VHDL/: Constants.hs  Generate.hs  Testbench.hs  VHDLTools.hs
clash/Data/Accessor/Monad/Trans/: StrictState.hs
clash/Data/Param/: Index.hs  Integer.hs  Signed.hs  Unsigned.hs  Vector.hs
cλash/: clash.cabal  cλash.cabal
cλash-nolibdir/: clash-nolibdir.cabal
cλash-nolibdir/CLasH/: Translator.hs  Utils.hs
cλash/CLasH/: HardwareTypes.hs  Normalize.hs  Translator.hs  Utils.hs  VHDL.hs
cλash/CLasH/Normalize/: NormalizeTools.hs  NormalizeTypes.hs
cλash/CLasH/Translator/: Annotations.hs  TranslatorTypes.hs
cλash/CLasH/Utils/: GhcTools.hs  HsTools.hs  Pretty.hs
cλash/CLasH/Utils/Core/: BinderTools.hs  CoreShow.hs  CoreTools.hs
cλash/CLasH/VHDL/: Constants.hs  Generate.hs  Testbench.hs  VHDL.hs  VHDLTools.hs  VHDLTypes.hs
cλash/Data/Param/: Unsigned.hs  Vector.hs
examples/: Alu.hs  CPU.hs  FIR.hs  HighOrdAlu.hs  HighOrdAluOps.hs  MMult.hs  Reducer.hs
