name:                clash
version:             0.1
build-type:          Simple
synopsis:            CAES Languege for Hardware Descriptions (CλasH)
description:         CλasH is a toolchain/language to translate subsets of Haskell to synthesizable VHDL. It does this by translating the intermediate System Fc (GHC Core) representation to a VHDL AST, which is then written to file.
category:            Development
license:             BSD3
license-file:        LICENSE
package-url:         http://github.com/darchon/clash/tree/master
copyright:           Copyright (c) 2009 Christiaan Baaij & Matthijs Kooijman
author:              Christiaan Baaij & Matthijs Kooijman
stability:           alpha
maintainer:          christiaan.baaij@gmail.com & matthijs@stdin.nl
build-depends:       base > 4, syb, ghc, ghc-paths, transformers, haskell98,
                     ForSyDe > 3.0, regex-posix ,data-accessor-template, pretty,
                     data-accessor, containers, prettyclass, tfp > 0.3.2, 
                     tfvec > 0.1.2, QuickCheck, template-haskell, filepath

executable:          clash
main-is:             Main.hs     
ghc-options:         
