name:               clash-nolibdir
version:            0.1
build-type:         Simple
synopsis:           CAES Languege for Hardware Descriptions (CLasH)
description:        CLasH is a toolchain/language to translate subsets of
                    Haskell to synthesizable VHDL. It does this by translating
                    the intermediate System Fc (GHC Core) representation to a
                    VHDL AST, which is then written to file.
category:           Development
license:            BSD3
license-file:       LICENSE
package-url:        http://github.com/darchon/clash/tree/master
copyright:          Copyright (c) 2009 Christiaan Baaij & Matthijs Kooijman
author:             Christiaan Baaij & Matthijs Kooijman
stability:          alpha
maintainer:         christiaan.baaij@gmail.com & matthijs@stdin.nl
Cabal-Version:      >= 1.2

Library
  build-depends:    base > 4, clash, ghc-paths
  extensions:       PackageImports          
  exposed-modules:  CLasH.Translator
  
