name:               clash
version:            0.1
build-type:         Simple
synopsis:           CAES Languege for Hardware Descriptions (CLasH)
description:        CLasH is a toolchain/language to translate subsets of
                    Haskell to synthesizable VHDL. It does this by translating
                    the intermediate System Fc (GHC Core) representation to a
                    VHDL AST, which is then written to file.
category:           Development
license:            BSD3
license-file:       LICENSE
package-url:        http://github.com/darchon/clash/tree/master
copyright:          Copyright (c) 2009 Christiaan Baaij & Matthijs Kooijman
author:             Christiaan Baaij & Matthijs Kooijman
stability:          alpha
maintainer:         christiaan.baaij@gmail.com & matthijs@stdin.nl
Cabal-Version:      >= 1.2

Library
  build-depends:    ghc >= 6.11, pretty, vhdl > 0.1, haskell98, syb,
                    data-accessor, containers, base >= 4, transformers,
                    filepath, template-haskell, data-accessor-template,
                    prettyclass, directory
                    
  exposed-modules:  CLasH.Translator
                    CLasH.Translator.Annotations
                    CLasH.Utils
                    
  other-modules:    CLasH.Translator.TranslatorTypes
                    CLasH.Normalize
                    CLasH.Normalize.NormalizeTypes
                    CLasH.Normalize.NormalizeTools
                    CLasH.VHDL
                    CLasH.VHDL.Constants
                    CLasH.VHDL.Generate
                    CLasH.VHDL.VHDLTools
                    CLasH.VHDL.VHDLTypes
                    CLasH.Utils.GhcTools
                    CLasH.Utils.HsTools
                    CLasH.Utils.Pretty
                    CLasH.Utils.Core.CoreShow
                    CLasH.Utils.Core.CoreTools
  
